syntax = "proto3";

package internalpb;

import "internal/actor.proto";
import "internal/grain.proto";

option go_package = "github.com/tochemey/goakt/v3/internal/internalpb;internalpb";

message PeerState {
  string host = 1;
  int32 remoting_port = 2;
  int32 peers_port = 3;
  // actorName -> Actor
  map<string, internalpb.Actor> actors = 4;
  // grainId -> Grain
  map<string, internalpb.Grain> grains = 5;
}

message Rebalance {
  PeerState peer_state = 1;
}

message RebalanceComplete {
  string peer_address = 1;
}
